tests/bad/system.alp
component Name:
    string name
end 

component Stats:
    int age
    float height
end

component Color:
    string color 
end 

function void main(<string> args):
    run() 
end

system run():
    query<a> [Name] as names
    query<a> [Name, Stats, Color] as names

    for n in names:
        n.Name.name = "string"
    end
end
